# mab-algos

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst  mab_algos.contextual_bandit.rst  mab_algos.experiment.contextual.helpers.rst  mab_algos.experiment.contextual.rst  mab_algos.experiment.rst  mab_algos.experiment.simple.rst  mab_algos.rst  mab_algos.simple_bandit.rst  modules.rst
src/mab-algos/simple_bandit/: algos.py
src/mab_algos/contextual_bandit/: __init__.py  base_contextual.py  linear_full_posterior.py  linear_regression.py  logistic_laplace.py
src/mab_algos/experiment/contextual/: __init__.py  experiment.py
src/mab_algos/experiment/contextual/helpers/: data_sampler.py  flags.py  simulator.py
src/mab_algos/experiment/simple/: __init__.py  experiment.py
src/mab_algos/simple_bandit/: __init__.py  base_bandit.py  policies.py
