[tool.poetry]
name = "mab_algos"
version = "0.0.1"
readme = "README.md"
homepage = "https://github.com/matiasbenitez91/mab-algos"
repository = "https://github.com/matiasbenitez91/mab-algos"
packages = [
	{ include = "mab_algos", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow="^2.2.0"
#flowcast = {git = "ssh://git@github.com/flowcast/flowcast-common", rev = "develop"}
Click = "^7.0"
ipykernel = "^5.3.0"
pandas = "^1.0.4"
toolz = "^0.10.0"
dask = {version = "^2.19.0", extras = ["complete"]}
matplotlib = "^3.2.2"
sphinx = "^3.1.1"
scipy = "1.4.1"
tqdm = "^4.48.0"
scikit-learn = "^0.23.2"


[tool.poetry.dev-dependencies]

#[tool.poetry.scripts]
#till-auth0='mab-service.console.console:cmd'


[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
